--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <audio id="bgm" src="./assets/bgm.mp3" autoplay loop></audio>
   <div class="game-screen">
-    <img src="https://i.imgur.com/t1JrLZl.png" class="farm-bg" />
+  <img src="./assets/farm-bg.png" class="farm-bg" />
     <div class="mailbox" onclick="openLetter()"></div>
   </div>
 
