--- a/index.html
+++ b/index.html
@@ -15,13 +15,19 @@
     <div class="letter-frame">
       <div class="letter-content">
         <h2>亲爱的，生日快乐 🎉</h2>
-        <button onclick="document.getElementById('song').play()">▶️ 听我唱歌</button><br />
-        <audio id="song" src="./assets/birthday_song.m4a" controls></audio>
-        <div class="letters">
-          <img src="./assets/letter1.jpeg" />
-          <img src="./assets/letter2.jpeg" />
-          <img src="./assets/letter3.jpeg" />
-          <img src="./assets/letter4.jpeg" />
+
+        <button onclick="showLetterContent()">📨 打开信件</button>
+
+        <div id="realContent" style="display: none;">
+          <button onclick="document.getElementById('song').play()">▶️ 听我唱歌</button><br />
+          <audio id="song" src="./assets/birthday_song.m4a" controls></audio>
+
+          <div class="letters">
+            <img src="./assets/letter1.jpeg" />
+            <img src="./assets/letter2.jpeg" />
+            <img src="./assets/letter3.jpeg" />
+            <img src="./assets/letter4.jpeg" />
+          </div>
         </div>
       </div>
     </div>
